tests passing on python 3

--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,17 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
-nosetests.xml
 
 # Translations
 *.mo
 
-# Mr Developer
 .mr.developer.cfg
 .project
 .pydevproject
+
+.cache
+.idea
+.DS_Store
+
+MANIFEST
+htmlcov/
