--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
 [tox]
-envlist = py27, py34, py35, py36, flake8
+envlist = py39, py310, py311, py312, black, isort
 
-[testenv:flake8]
+[testenv:isort]
 basepython=python
-deps=flake8
-commands=flake8 sizefs
+deps=isort
+commands=python -m isort sizefs
+
+[testenv:black]
+basepython=python
+deps=black
+commands=python -m black sizefs
 
 [testenv]
 setenv =
@@ -14,4 +19,4 @@ deps =
     -r{toxinidir}/requirements/test_requirements.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir} --cov=sizefs --cov-append
+    pytest -Wignore --basetemp={envtmpdir} --cov=sizefs --cov-append
