--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,20 @@
 [tox]
-envlist = py39, py310, py311, py312, black, isort
+envlist = py{39,310,311,312}, black, isort
 
 [testenv:isort]
 basepython=python
 deps=isort
-commands=python -m isort sizefs
+commands=python -m isort .
 
 [testenv:black]
 basepython=python
 deps=black
-commands=python -m black sizefs
+commands=python -m black .
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements/requirements.txt
-    -r{toxinidir}/requirements/test_requirements.txt
+allowlist_externals = poetry
 commands =
-    pip install -U pip
-    pytest -Wignore --basetemp={envtmpdir} --cov=sizefs --cov-append
+    poetry install --with=dev
+    pytest -Wignore --basetemp={envtmpdir}
