--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mock = "^5.1.0"
 tox = "^4.14.1"
 black = "^24.3.0"
 isort = "^5.13.2"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
