--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,5 @@ setenv =
     PYTHONPATH = {toxinidir}
 allowlist_externals = poetry
 commands =
-    poetry install --with=dev
+    poetry install --with=dev --no-ansi
     pytest -Wignore --basetemp={envtmpdir}
