--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,14 @@ orbs:
   browser-tools: circleci/browser-tools@1.3.0
 
 executors:
-  python:
-    docker:
-      - image: cimg/python:3.10
+  python3-9: {docker: [{image: cimg/python:3.9}]}
+  python3-10: {docker: [{image: cimg/python:3.10}]}
+  python3-11: {docker: [{image: cimg/python:3.11}]}
+  python3-12: {docker: [{image: cimg/python:3.12}]}
 
 jobs:
   setup:
-    executor: python
+    executor: python3-12
     steps:
       - checkout
       - python/install-packages:
@@ -19,8 +20,25 @@ jobs:
       - run:
           name: Install python dependencies
           command: poetry install
-  tests:
-    executor: python
+  build:
+    executor: python3-12
+    parameters:
+      python-version:
+        type: string
+        default: "py39"
+    steps:
+      - checkout
+      - python/install-packages:
+          pkg-manager: poetry
+      - run:
+          name: Install apt dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y libfuse-dev
+      - run:
+          command: poetry build
+  tests: &test-template
+    executor: python3-12
     steps:
       - checkout
       - python/install-packages:
@@ -33,11 +51,27 @@ jobs:
       - run:
           command: poetry run pytest --cov=sizefs
       - run:
-          command: poetry run tox
+          command: poetry run tox -e << parameters.python-version >>
       - run:
           command: poetry build
+  tests-3-9:
+    <<: *test-template
+    executor: python3-9
+    parameters: {python-version: {default: "py39", type: string}}
+  tests-3-10:
+    <<: *test-template
+    executor: python3-10
+    parameters: {python-version: {default: "py310", type: string}}
+  tests-3-11:
+    <<: *test-template
+    executor: python3-11
+    parameters: {python-version: {default: "py311", type: string}}
+  tests-3-12:
+    <<: *test-template
+    executor: python3-12
+    parameters: {python-version: {default: "py312", type: string}}
   linting:
-    executor: python
+    executor: python3-12
     steps:
       - checkout
       - python/install-packages:
@@ -51,5 +85,9 @@ workflows:
   main:
     jobs:
       - setup
-      - tests: {requires: [setup]}
+      - tests-3-9: {requires: [setup], python-version: "py39"}
+      - tests-3-10: {requires: [setup], python-version: "py310"}
+      - tests-3-11: {requires: [setup], python-version: "py311"}
+      - tests-3-12: {requires: [setup], python-version: "py312"}
       - linting: {requires: [setup]}
+      - build: {requires: [setup, tests-3-9, tests-3-10, tests-3-11, tests-3-12, linting]}
