--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tox = "^4.14.1"
 black = "^24.3.0"
 isort = "^5.13.2"
 pytest-cov = "^4.1.0"
+circleci = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
