--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ orbs:
   browser-tools: circleci/browser-tools@1.3.0
 
 executors:
-  python3-9: {docker: [{image: cimg/python:3.9}]}
-  python3-10: {docker: [{image: cimg/python:3.10}]}
-  python3-11: {docker: [{image: cimg/python:3.11}]}
-  python3-12: {docker: [{image: cimg/python:3.12}]}
+  python3-9: { docker: [{ image: "cimg/python:3.9" }] }
+  python3-10: { docker: [{ image: "cimg/python:3.10" }] }
+  python3-11: { docker: [{ image: "cimg/python:3.11" }] }
+  python3-12: { docker: [{ image: "cimg/python:3.12" }] }
 
 jobs:
   setup:
@@ -57,19 +57,19 @@ jobs:
   tests-3-9:
     <<: *test-template
     executor: python3-9
-    parameters: {python-version: {default: "py39", type: string}}
+    parameters: { python-version: { default: "py39", type: string } }
   tests-3-10:
     <<: *test-template
     executor: python3-10
-    parameters: {python-version: {default: "py310", type: string}}
+    parameters: { python-version: { default: "py310", type: string } }
   tests-3-11:
     <<: *test-template
     executor: python3-11
-    parameters: {python-version: {default: "py311", type: string}}
+    parameters: { python-version: { default: "py311", type: string } }
   tests-3-12:
     <<: *test-template
     executor: python3-12
-    parameters: {python-version: {default: "py312", type: string}}
+    parameters: { python-version: { default: "py312", type: string } }
   linting:
     executor: python3-12
     steps:
@@ -85,9 +85,13 @@ workflows:
   main:
     jobs:
       - setup
-      - tests-3-9: {requires: [setup], python-version: "py39"}
-      - tests-3-10: {requires: [setup], python-version: "py310"}
-      - tests-3-11: {requires: [setup], python-version: "py311"}
-      - tests-3-12: {requires: [setup], python-version: "py312"}
-      - linting: {requires: [setup]}
-      - build: {requires: [setup, tests-3-9, tests-3-10, tests-3-11, tests-3-12, linting]}
+      - tests-3-9: { requires: [setup], python-version: "py39" }
+      - tests-3-10: { requires: [setup], python-version: "py310" }
+      - tests-3-11: { requires: [setup], python-version: "py311" }
+      - tests-3-12: { requires: [setup], python-version: "py312" }
+      - linting: { requires: [setup] }
+      - build:
+          {
+            requires:
+              [setup, tests-3-9, tests-3-10, tests-3-11, tests-3-12, linting],
+          }
