--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ black = "^24.3.0"
 isort = "^5.13.2"
 pytest-cov = "^4.1.0"
 circleci = "^1.2.2"
+pre-commit = "^3.6.2"
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
